--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@
   --bg-primary: #23232e;
   --bg-secondary: #141418;
   --bg-light-primary: #ffffff;
-  --accent-primary: rgba(231, 64, 223, 0.815);
+  --accent-primary: #FFDB58;
   --transition-speed: 600ms;
 }
 
@@ -45,22 +45,24 @@ body::-webkit-scrollbar-thumb {
 }
 
 body h1 {
-  font-size: 3.5em;
+  font-size: 2.5em;
   font-weight: 700;
 }
 
 body h2 {
-  font-size: 2.3em;
+  font-size: 1.3em;
   font-weight: 300;
 }
 
 body .ux {
+  font-weight: 400;
   letter-spacing: .4em;
   -webkit-transition: all var(--transition-speed);
   transition: all var(--transition-speed);
 }
 
 body .dev {
+  font-weight: 400;
   letter-spacing: .1em;
   -webkit-transition: all var(--transition-speed);
   transition: all var(--transition-speed);
@@ -72,7 +74,7 @@ body ul {
 
 body a {
   text-decoration: none;
-  color: black;
+  color: var(--bg-primary);
   font-size: 1.9em;
   -webkit-transition: var(--transition-speed) ease;
   transition: var(--transition-speed) ease;
@@ -80,13 +82,32 @@ body a {
 
 body .icon {
   font-size: .8em;
-  -webkit-transition: all var(--transition-speed);
-  transition: all var(--transition-speed);
+  -webkit-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
 }
 
 body .icon:hover {
-  color: var(--accent-primary);
   font-size: 1.3em;
+}
+
+body .icon:hover .fa-behance {
+  color: #053eFF;
+}
+
+body .icon:hover .fa-github {
+  color: var(--accent-primary);
+}
+
+body .icon:hover .fa-linkedin {
+  color: #2867B2;
+}
+
+body .icon:hover .fa-envelope {
+  color: var(--accent-primary);
+}
+
+body .pop:hover {
+  color: var(--accent-primary);
 }
 
 body .nav-bar {
@@ -98,7 +119,9 @@ body .nav-bar {
 
 body .nav-bar .nav-list {
   width: 100%;
+  height: 100%;
   padding: 0;
+  margin: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -112,7 +135,7 @@ body .nav-bar .nav-list {
       justify-content: space-around;
 }
 
-body .nav-bar a::after {
+body .nav-bar .bar::after {
   display: block;
   content: '';
   border-bottom: solid 3px #8556A6;
@@ -124,7 +147,7 @@ body .nav-bar a::after {
   transition: transform 250ms ease-in-out, -webkit-transform 250ms ease-in-out;
 }
 
-body .nav-bar a:hover::after {
+body .nav-bar .bar:hover::after {
   -webkit-transform: scaleX(1);
           transform: scaleX(1);
 }
@@ -141,6 +164,14 @@ body .hero {
       -ms-flex-align: center;
           align-items: center;
   justify-items: center;
+}
+
+body .hero .name {
+  position: absolute;
+  top: 48%;
+  font-family: 'Open Sans';
+  text-transform: uppercase;
+  letter-spacing: .5em;
 }
 
 body .hero .cta-button {
@@ -165,6 +196,7 @@ body .hero .cta-button {
 
 body .hero .cta-button p {
   font-size: .5em;
+  font-weight: 700;
 }
 
 body .hero .cta-button span {
@@ -173,7 +205,11 @@ body .hero .cta-button span {
 
 body .hero .cta-button:hover {
   background-color: var(--accent-primary);
-  border-color: var(--bg-light-primary);
+  border-color: var(--accent-primary);
+}
+
+body .hero .cta-button:hover p, body .hero .cta-button:hover i {
+  color: var(--bg-primary);
 }
 
 body .hero .right-hero {
@@ -200,10 +236,20 @@ body .hero .right-hero {
           justify-content: center;
 }
 
+body .hero .right-hero h2 {
+  position: absolute;
+  top: 60%;
+}
+
+body .hero .right-hero a {
+  position: absolute;
+  top: 70%;
+}
+
 body .hero .right-hero:hover {
   width: 180%;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(163, 149, 149, 0.2)), to(rgba(224, 242, 87, 0.8))), url("../assets/right-v2.jpg");
-  background: linear-gradient(rgba(163, 149, 149, 0.2), rgba(224, 242, 87, 0.8)), url("../assets/right-v2.jpg");
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(163, 149, 149, 0.2)), to(rgba(224, 242, 87, 0.5))), url("../assets/right-v2.jpg");
+  background: linear-gradient(rgba(163, 149, 149, 0.2), rgba(224, 242, 87, 0.5)), url("../assets/right-v2.jpg");
   background-size: cover;
 }
 
@@ -222,10 +268,6 @@ body .hero .right-hero:hover .dev {
 
 body .hero .right-hero span {
   padding: 0 0 0 .7em;
-}
-
-body .hero .right-hero h1 {
-  font-family: 'Source Code Pro';
 }
 
 body .hero .left-hero {
@@ -255,8 +297,14 @@ body .hero .left-hero {
   font-family: 'Open Sans';
 }
 
-body .hero .left-hero h1 {
-  font-family: 'Open Sans';
+body .hero .left-hero h2 {
+  position: absolute;
+  top: 60%;
+}
+
+body .hero .left-hero a {
+  position: absolute;
+  top: 70%;
 }
 
 body .hero .left-hero span {
@@ -265,8 +313,8 @@ body .hero .left-hero span {
 
 body .hero .left-hero:hover {
   width: 180%;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(163, 149, 149, 0.2)), to(rgba(217, 96, 85, 0.815))), url("../assets/left.jpg");
-  background: linear-gradient(rgba(163, 149, 149, 0.2), rgba(217, 96, 85, 0.815)), url("../assets/left.jpg");
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(163, 149, 149, 0.2)), to(rgba(217, 96, 85, 0.5))), url("../assets/left.jpg");
+  background: linear-gradient(rgba(163, 149, 149, 0.2), rgba(217, 96, 85, 0.5)), url("../assets/left.jpg");
   background-size: cover;
 }
 
@@ -303,8 +351,15 @@ body .main section {
           justify-content: center;
   -ms-flex-line-pack: center;
       align-content: center;
-  padding: 1.5em;
+  padding: 1.5em 0;
   font-family: 'Open Sans';
+}
+
+body .main section div.two {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(400px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
 }
 
 body .main section:nth-last-child(1) {
@@ -320,9 +375,15 @@ body .main section:nth-child(2n) {
   color: var(--bg-light-primary);
 }
 
+body .main section:nth-child(2n) .section-title {
+  color: var(--accent-primary);
+}
+
 body .main section .section-title {
-  font-size: 1.5em;
+  font-size: 1.5rem;
   text-align: center;
+  text-transform: uppercase;
+  letter-spacing: .8rem;
 }
 
 body .main section .section-body {
@@ -357,16 +418,13 @@ body .main section .section-body .section-content {
   line-height: 2.5em;
 }
 
+body .main section .section-body .section-content h2 {
+  text-align: center;
+}
+
 body .main .footer {
   height: auto;
   padding: 0;
-}
-
-body .main .footer .section-body {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (minmax(400px, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
 }
 
 body .copy {
@@ -382,9 +440,19 @@ body .copy p {
 }
 
 body .info {
+  background-color: transparent;
   width: 14%;
   height: 5.5%;
+  border-radius: 1.6em;
+  position: absolute;
+  z-index: 0;
+  right: 5%;
+  top: 90%;
+}
+
+body .info .inner {
   background-color: var(--bg-light-primary);
+  width: 100%;
   border-radius: 1.6em;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -395,10 +463,6 @@ body .info {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  position: absolute;
-  z-index: 0;
-  right: 5%;
-  top: 90%;
 }
 
 body .info .tip {
@@ -412,12 +476,21 @@ body .info .icon {
           animation: rotate 1.5s linear infinite;
 }
 
-@media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 768px) {
   div.hero, div.info {
     display: none;
   }
   .main {
     padding: 13% 0 0 0;
+  }
+  .main p {
+    font-size: 1.3em;
+  }
+}
+
+@media only screen and (max-width: 1024) {
+  div.hero, div.info {
+    display: none;
   }
 }
 /*# sourceMappingURL=main.css.map */
