--- a/css/main.css
+++ b/css/main.css
@@ -155,6 +155,12 @@ body .nav-bar .bar:hover::after {
           transform: scaleX(1);
 }
 
+body .nav-bg {
+  background-color: var(--bg-light-primary);
+  -webkit-transition: background-color var(--transition-speed) ease-in;
+  transition: background-color var(--transition-speed) ease-in;
+}
+
 body .hero {
   height: 100vh;
   display: -webkit-box;
@@ -451,6 +457,15 @@ body .copy {
   text-align: center;
   background-color: var(--bg-primary);
   color: var(--bg-light-primary);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 body .copy p {
