--- a/css/main.scss
+++ b/css/main.scss
@@ -427,7 +427,7 @@ body{
 
 
 @media only screen and (max-width: 1024px) {
-    div.hero, div.info{
+    div.hero, div.info, div.info-left{
         display: none;
     }
     div.hero-mobile{
