--- a/css/main.scss
+++ b/css/main.scss
@@ -422,6 +422,13 @@ body{
        
         
     }
+
+    .fa-times-circle{
+        color: red;
+    }
+    .fa-check-circle{
+        color: green;
+    }
 }
 
 
