--- a/main.scss
+++ b/main.scss
@@ -141,6 +141,21 @@ body {
     align-items: center;
     justify-items: center;
 
+    .hero-name {
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      position: absolute;
+      top: 30%;
+      font-family: "Source Code Pro";
+      text-transform: uppercase;
+      letter-spacing: 0.5em;
+
+      h1 {
+        font-size: 4em;
+        text-shadow: 6px 4px var(--accent-primary);
+      }
+    }
     .name {
       position: absolute;
       top: 48%;
@@ -351,25 +366,53 @@ body {
         padding: 5em 0;
         // grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
         // column-gap: 2em;
-
-        .card-container {
+        .project-card {
+          padding: 1.5em 0;
+          font-family: "Source Code Pro";
           width: 60%;
-          margin: 1em 0;
-          padding: 1em;
-          border-radius: 0.7em;
-          border: 2px solid white;
-          display: flex;
-          flex-direction: column;
-          background-color: var(--bg-light-primary);
-          background: linear-gradient(
-              rgba(13, 10, 32, 0.7),
-              rgba(13, 10, 32, 0.7)
-            ),
-            url("/assets/right.jpg");
-          background-size: cover;
 
-          .card-img {
-            display: none;
+          h3 {
+            color: var(--accent-primary);
+            font-size: 1.6em;
+          }
+          h4 {
+            font-weight: 400;
+            font-size: 1em;
+            letter-spacing: 0.1em;
+          }
+          p {
+            text-align: justify;
+          }
+          img {
+            width: 100%;
+          }
+          .tags {
+            width: 100%;
+            display: flex;
+            align-items: flex-start;
+
+            .tag-icon {
+              display: flex;
+              align-items: center;
+              background-color: var(--bg-secondary);
+              margin: 0 1em 0 0;
+              height: 2em;
+              border-radius: 100px;
+              h6 {
+                color: var(--accent-primary);
+                padding: 1em;
+              }
+            }
+          }
+          .tip {
+            font-size: 0.5em;
+            color: var(--text-secondary);
+            transition: ease-in 0.3s;
+
+            &:hover {
+              cursor: pointer;
+              color: var(--accent-primary);
+            }
           }
         }
 
