fixed styling issue where lnagauge tags were not breaking on narrower devices

--- a/main.scss
+++ b/main.scss
@@ -377,7 +377,7 @@ body {
           h3 {
             color: var(--accent-primary);
             font-size: 1.6em;
-            word-break: break-all;
+            word-break: break-word;
           }
           h4 {
             font-weight: 400;
@@ -394,12 +394,13 @@ body {
             width: 100%;
             display: flex;
             align-items: flex-start;
+            flex-wrap: wrap;
 
             .tag-icon {
               display: flex;
               align-items: center;
               background-color: var(--bg-secondary);
-              margin: 0 1em 0 0;
+              margin: 0.3em 0.5em 0.3em 0;
               height: 2em;
               border-radius: 100px;
               transition: ease-in 0.3s;
